--- a/comp1073-10/css/styles.css
+++ b/comp1073-10/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
 	font-family: sans-serif;
-	font-size: 150%;
+	font-size: 60%;
 	line-height: 1.4;
 	width: 960px;
 	margin: 0 auto;
@@ -34,13 +34,14 @@ section {
 section article {
 	border: 1px solid black;
 	box-shadow: 0 2px 14px grey;
-	padding: 2.5%;
-	width: 25%
+	padding: 5px;
+	width: 18%;
 }
 article img {
 	display: block;
-	height: 150px;
-	width: 90px;
+	height: 100px;
+	width: 60px;
+	margin: 0 auto;
 }
 section p {
   margin: 5px 0;
@@ -51,6 +52,6 @@ section ul {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 24px;
   margin-bottom: 10px;
 }
